--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "firebase": "^9.8.3",
     "firebase-tools": "^11.1.0",
     "g": "^2.0.1",
     "props": "^0.3.0",
@@ -20,6 +21,7 @@
     "react-scripts": "5.0.1",
     "serve": "^13.0.2",
     "styled-components": "^5.3.5",
+    "tools": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
