--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "moodboard",
+  "homepage": "https://karenkcameron.github.io/JSCRIPT320B_finalproject",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,11 +26,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+     "predeploy": "npm run build",
+     "deploy": "gh-pages -d build",
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
+    },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -47,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
